# etf-qim

./: .env.example  LICENSE  README.md  pyproject.toml
src/: main.py
src/modules/backtesting/: workflow.py
src/modules/backtesting/analyzers/: performance_analyzer.py
src/modules/backtesting/engine/: backtest_engine.py
src/modules/backtesting/reporters/: report_generator.py
src/modules/data_acquisition/: workflow.py
src/modules/mock/: mock_etf.py
src/modules/trading_strategy/: workflow.py
src/modules/trading_strategy/buy_strategies/: quantile_buy_strategy.py
src/modules/trading_strategy/models/: strategy_config.py
src/modules/trading_strategy/sell_strategies/: quantile_sell_strategy.py
src/utils/: baostock_data_source.py
src/workflow/: etf_analysis_workflow.py
