[tool.poetry]
name = "etf qim"
version = "0.1.0"
description = "ETF quantitative investment management"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [
    { include = "src" }
]

[tool.poetry.dependencies]
python = "^3.10"
baostock = "^0.8.9"
langgraph = "^0.2.5"
pandas = "^2.1.4"
matplotlib = "^3.8.2"
numpy = "^1.26.3"
seaborn = "^0.13.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"


[[tool.poetry.source]]
name = "mirrors"
url = "https://repo.huaweicloud.com/repository/pypi/simple"
priority = "supplemental"
